--- a/src/App.css
+++ b/src/App.css
@@ -6,30 +6,24 @@
 }
 
 
-.background-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-  margin: auto;
-
-
-}
 
 .overlay {
   position: absolute;
+
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   object-fit: cover;
-  background-image:
-    linear-gradient(to bottom, rgba(34, 35, 46, 0.1) 70%, rgba(34, 35, 46)),
-    url("../assets/Rectangle.png");
-
+/* background-image:
+    linear-gradient(to bottom, rgba(1, 1, 1, -0) 0%, rgba(10, 17, 10, 0.4) 100%); */
   background-size: cover;
   background-position: center;
+  /* opacity: 0.8; */
+  z-index: 1;
+  /* height: 100%; */
+  /* background: linear-gradient(180deg, rgba(33, 44, 46, 0) 0%, #212C2E 100%); */
+}
+.btn_div button{
+  text-transform: uppercase;
 }
